# pyppl

./: .pre-commit-config.yaml  README.md  pyproject.toml
programs/: test.pyppl  test1.pyppl  test2.pyppl
src/pyppl/: __main__.py  analysis.py  ast.py  environment.py  floatutil.py  learning.py  params.py  parser.py
test/: test_analysis.py  test_ast.py  test_floatutil.py  test_main.py  test_params.py  test_parser.py
